third_party/rust/chromium_crates_io/vendor/parity-scale-codec-v3/tests/scale_codec_ui/codec_discriminiant_variant_counted_in_default_index.rs
#[derive(::parity_scale_codec::Decode, ::parity_scale_codec::Encode)]
#[codec(crate = ::parity_scale_codec)]
enum T {
	A = 1,
	B,
}

#[derive(::parity_scale_codec::Decode, ::parity_scale_codec::Encode)]
#[codec(crate = ::parity_scale_codec)]
enum T2 {
	#[codec(index = 1)]
	A,
	B,
}

fn main() {}
